// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test output > A minimal workflow definition. 1`] = `
"## A Workflow

### Usage

\`\`\`yaml
jobs:
  job1:
    uses: ***PROJECT***@***VERSION***
\`\`\`


"
`;

exports[`Test output > All fields workflow definition. 1`] = `
"## A Workflow

### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <p>A description A</p> | \`string\` | \`false\` | \`""\` |
| \`inputB\` | <p>A description B</p> | \`string\` | \`true\` | \`""\` |
| \`inputC\` | <p>A description C</p> | \`string\` | \`true\` | \`C\` |
| \`inputD\` | <p>A description D</p> | \`string\` | \`false\` | \`D\` |
| \`inputE\` | <p>A description E</p> | \`string\` | \`false\` | \`false\` |


### Secrets

| name | description | required |
| --- | --- | --- |
| \`notVerySecret\` | <p>A secret</p> | \`true\` |


### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |


### Usage

\`\`\`yaml
jobs:
  job1:
    uses: ***PROJECT***@***VERSION***
    with:
      inputA:
      # A description A
      #
      # Type: string
      # Required: false
      # Default: ""

      inputB:
      # A description B
      #
      # Type: string
      # Required: true
      # Default: ""

      inputC:
      # A description C
      #
      # Type: string
      # Required: true
      # Default: C

      inputD:
      # A description D
      #
      # Type: string
      # Required: false
      # Default: D

      inputE:
      # A description E
      #
      # Type: string
      # Required: false
      # Default: false
\`\`\`


"
`;

exports[`Test output > With defaults. 1`] = `
"## A Workflow

### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <ul> <li>Item 1<ul> <li>foo, bar, baz</li> </ul> </li> <li>Item 2<ul> <li><a href="https://github.com/">github</a></li> <li><strong>blah</strong></li> </ul> </li> <li>Item 3</li> </ul> | \`string\` | \`false\` | \`This is a default\` |
| \`inputB\` | <p>This is a multiline description</p> | \`number\` | \`true\` | \`""\` |


### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>This is output A</p> |


### Usage

\`\`\`yaml
jobs:
  job1:
    uses: ***PROJECT***@***VERSION***
    with:
      inputA:
      # - Item 1
      #     - foo, bar, baz
      # - Item 2
      #     - [github](https://github.com/)
      #     - **blah**
      # - Item 3
      #
      # Type: string
      # Required: false
      # Default: This is a default

      inputB:
      # This is a
      # multiline description
      #
      # Type: number
      # Required: true
      # Default: ""
\`\`\`


"
`;

exports[`Test output > With secrets. 1`] = `
"## A Workflow with secrets

### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <ul> <li>Item 1<ul> <li>foo, bar, baz</li> </ul> </li> <li>Item 2<ul> <li><a href="https://github.com/">github</a></li> <li><strong>blah</strong></li> </ul> </li> <li>Item 3</li> </ul> | \`string\` | \`false\` | \`This is a default\` |
| \`inputB\` | <p>This is a multiline description</p> | \`number\` | \`true\` | \`""\` |


### Secrets

| name | description | required |
| --- | --- | --- |
| \`notVerySecret\` | <p>A secret</p> | \`true\` |


### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>This is output A</p> |


### Usage

\`\`\`yaml
jobs:
  job1:
    uses: ***PROJECT***@***VERSION***
    with:
      inputA:
      # - Item 1
      #     - foo, bar, baz
      # - Item 2
      #     - [github](https://github.com/)
      #     - **blah**
      # - Item 3
      #
      # Type: string
      # Required: false
      # Default: This is a default

      inputB:
      # This is a
      # multiline description
      #
      # Type: number
      # Required: true
      # Default: ""
\`\`\`


"
`;

exports[`Test update readme  > All fields one annotation 1`] = `
"<!-- ya-action-docs-all source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
## A Workflow

### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <p>A description A</p> | \`string\` | \`false\` | \`""\` |
| \`inputB\` | <p>A description B</p> | \`string\` | \`true\` | \`""\` |
| \`inputC\` | <p>A description C</p> | \`string\` | \`true\` | \`C\` |
| \`inputD\` | <p>A description D</p> | \`string\` | \`false\` | \`D\` |
| \`inputE\` | <p>A description E</p> | \`string\` | \`false\` | \`false\` |


### Secrets

| name | description | required |
| --- | --- | --- |
| \`notVerySecret\` | <p>A secret</p> | \`true\` |


### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |


### Usage

\`\`\`yaml
jobs:
  job1:
    uses: goatwu1993/ya-action-docs@v1
    with:
      inputA:
      # A description A
      #
      # Type: string
      # Required: false
      # Default: ""

      inputB:
      # A description B
      #
      # Type: string
      # Required: true
      # Default: ""

      inputC:
      # A description C
      #
      # Type: string
      # Required: true
      # Default: C

      inputD:
      # A description D
      #
      # Type: string
      # Required: false
      # Default: D

      inputE:
      # A description E
      #
      # Type: string
      # Required: false
      # Default: false
\`\`\`
<!-- ya-action-docs-all source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
"
`;

exports[`Test update readme  > Empty readme (all fields) 1`] = `
"<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->
## A Workflow
<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-usage source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
### Usage

\`\`\`yaml
jobs:
  job1:
    uses: goatwu1993/ya-action-docs@v1
    with:
      inputA:
      # A description A
      #
      # Type: string
      # Required: false
      # Default: ""

      inputB:
      # A description B
      #
      # Type: string
      # Required: true
      # Default: ""

      inputC:
      # A description C
      #
      # Type: string
      # Required: true
      # Default: C

      inputD:
      # A description D
      #
      # Type: string
      # Required: false
      # Default: D

      inputE:
      # A description E
      #
      # Type: string
      # Required: false
      # Default: false
\`\`\`
<!-- ya-action-docs-usage source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->

<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <p>A description A</p> | \`string\` | \`false\` | \`""\` |
| \`inputB\` | <p>A description B</p> | \`string\` | \`true\` | \`""\` |
| \`inputC\` | <p>A description C</p> | \`string\` | \`true\` | \`C\` |
| \`inputD\` | <p>A description D</p> | \`string\` | \`false\` | \`D\` |
| \`inputE\` | <p>A description E</p> | \`string\` | \`false\` | \`false\` |
<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |
<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
"
`;

exports[`Test update readme  > Filled readme (all fields) 1`] = `
"<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->
## A Workflow
<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <p>A description A</p> | \`string\` | \`false\` | \`""\` |
| \`inputB\` | <p>A description B</p> | \`string\` | \`true\` | \`""\` |
| \`inputC\` | <p>A description C</p> | \`string\` | \`true\` | \`C\` |
| \`inputD\` | <p>A description D</p> | \`string\` | \`false\` | \`D\` |
| \`inputE\` | <p>A description E</p> | \`string\` | \`false\` | \`false\` |
<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |
<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
"
`;

exports[`Test update readme  > Readme (all fields) with CRLF line breaks 1`] = `
"<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->
## A Workflow
<!-- ya-action-docs-header source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`inputA\` | <p>A description A</p> | \`string\` | \`false\` | \`""\` |
| \`inputB\` | <p>A description B</p> | \`string\` | \`true\` | \`""\` |
| \`inputC\` | <p>A description C</p> | \`string\` | \`true\` | \`C\` |
| \`inputD\` | <p>A description D</p> | \`string\` | \`false\` | \`D\` |
| \`inputE\` | <p>A description E</p> | \`string\` | \`false\` | \`false\` |
<!-- ya-action-docs-inputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->

<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |
<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
"
`;

exports[`Test update readme  > Readme (inputs) for action_docs_workflow 1`] = `
"<!-- ya-action-docs-inputs source="tests/fixtures/workflow/action_docs_workflow.yml" -->
### Inputs

| name | description | type | required | default |
| --- | --- | --- | --- | --- |
| \`readme\` | <p>Readme file to update.</p> | \`string\` | \`false\` | \`README.md\` |
| \`sourceFile\` | <p>The action definition file.</p> | \`string\` | \`false\` | \`action.yml\` |
| \`tocLevel\` | <p>TOC level used for the headers.</p> | \`string\` | \`false\` | \`2\` |
| \`lineBreaks\` | <p>Line breaks to be used in updated readme (LF|CR|CRLF).</p> | \`string\` | \`false\` | \`LF\` |
<!-- ya-action-docs-inputs source="tests/fixtures/workflow/action_docs_workflow.yml" -->
"
`;

exports[`Test update readme  > Readme for two workflow.yml-s 1`] = `
"<!-- ya-action-docs-inputs source="tests/fixtures/workflow/action_docs_workflow.yml" -->
### Inputs

| name | description | required | default |
| --- | --- | --- | --- |
| \`readme\` | <p>Readme file to update.</p> | \`false\` | \`README.md\` |
| \`sourceFile\` | <p>The action definition file.</p> | \`false\` | \`action.yml\` |
| \`tocLevel\` | <p>TOC level used for the headers.</p> | \`false\` | \`2\` |
| \`lineBreaks\` | <p>Line breaks to be used in updated readme (LF|CR|CRLF).</p> | \`false\` | \`LF\` |
<!-- ya-action-docs-inputs source="tests/fixtures/workflow/action_docs_workflow.yml" -->

<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
### Outputs

| name | description |
| --- | --- |
| \`outputA\` | <p>A description A</p> |
| \`outputB\` | <p>A description B</p> |
<!-- ya-action-docs-outputs source="tests/fixtures/workflow/all_fields_workflow.yml" -->
"
`;

exports[`Test usage format > Multi-line descriptions. 1`] = `
"<!-- ya-action-docs-usage source="tests/fixtures/workflow/workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
### Usage

\`\`\`yaml
jobs:
  job1:
    uses: goatwu1993/ya-action-docs@v1
    with:
      inputA:
      # - Item 1
      #     - foo, bar, baz
      # - Item 2
      #     - [github](https://github.com/)
      #     - **blah**
      # - Item 3
      #
      # Type: string
      # Required: false
      # Default: This is a default

      inputB:
      # This is a
      # multiline description
      #
      # Type: number
      # Required: true
      # Default: ""
\`\`\`
<!-- ya-action-docs-usage source="tests/fixtures/workflow/workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
"
`;

exports[`Test usage format > With and without defaults. 1`] = `
"<!-- ya-action-docs-usage source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
### Usage

\`\`\`yaml
jobs:
  job1:
    uses: goatwu1993/ya-action-docs@v1
    with:
      inputA:
      # A description A
      #
      # Type: string
      # Required: false
      # Default: ""

      inputB:
      # A description B
      #
      # Type: string
      # Required: true
      # Default: ""

      inputC:
      # A description C
      #
      # Type: string
      # Required: true
      # Default: C

      inputD:
      # A description D
      #
      # Type: string
      # Required: false
      # Default: D

      inputE:
      # A description E
      #
      # Type: string
      # Required: false
      # Default: false
\`\`\`
<!-- ya-action-docs-usage source="tests/fixtures/workflow/all_fields_workflow.yml" project="goatwu1993/ya-action-docs" version="v1" -->
"
`;
